SERVER-60322 Do not re-use `Collection*` when renaming collection between databases